all update files

--- a/assets/templates/blocks/sort_section.html
+++ b/assets/templates/blocks/sort_section.html
@@ -9,7 +9,7 @@
                         <div> <span>Стоимость </span> от 8 300 до 10 300 руб. </div>
                     </div>
                     <div class="col-xl-3">
-                        <button type="button" class="btn btn-primary btn-lg">Large button</button>
+                        <button type="button" class="btn btn-primary btn-lg">Поиск</button>
                     </div>
                 </div>
             </div>
