--- a/assets/templates/blocks/footer.html
+++ b/assets/templates/blocks/footer.html
@@ -1,62 +1,59 @@
-<footer>
+<footer class="mt-5">
     <div class="row position-relative">
         <div class="col-xl-12">
             <div class="row">
                 <div class="col-xl-12">
                     <div class="row ">
                         <div class="col-xl-2">
-                            <div class="card">
+                            <div class="card border-0">
                                 <div class="card-body">
                                     <h6>Компания</h6>
                                     <nav class="nav flex-column">
-                                        <a class="nav-link active" href="#">Active</a>
-                                        <a class="nav-link" href="#">Link</a>
-                                        <a class="nav-link" href="#">Link</a>
-                                        <a class="nav-link disabled" href="#">Disabled</a>
+                                        <a class="nav-link" href="#">О компании</a>
+                                        <a class="nav-link" href="#">Новости</a>
                                     </nav>
                                 </div>
                             </div>
                         </div>
                         <div class="col-xl-3">
-                            <div class="card">
+                            <div class="card border-0">
                                 <div class="card-body">
                                     <h6>Информация</h6>
                                     <nav class="nav flex-column">
-                                        <a class="nav-link active" href="#">Active</a>
-                                        <a class="nav-link" href="#">Link</a>
-                                        <a class="nav-link" href="#">Link</a>
-                                        <a class="nav-link disabled" href="#">Disabled</a>
+                                        <a class="nav-link" href="#">Помощь</a>
+                                        <a class="nav-link" href="#">Условия оплаты</a>
+                                        <a class="nav-link" href="#">Описание процесса оплаты с помощью банковской карты</a>
+                                        <a class="nav-link" href="#">Условия доставки</a>
+                                        <a class="nav-link" href="#">Гарантия на товар</a>
                                     </nav>
                                 </div>
                             </div>
                         </div>
                         <div class="col-xl-2">
-                            <div class="card">
+                            <div class="card border-0">
                                 <div class="card-body">
                                     <h6>Помощь</h6>
                                     <nav class="nav flex-column">
-                                        <a class="nav-link active" href="#">Active</a>
-                                        <a class="nav-link" href="#">Link</a>
-                                        <a class="nav-link" href="#">Link</a>
-                                        <a class="nav-link disabled" href="#">Disabled</a>
+                                        <a class="nav-link" href="#">Статьи</a>
+                                        <a class="nav-link" href="#">Производители</a>
                                     </nav>
                                 </div>
                             </div>
                         </div>
                         <div class="col-xl-2">
-                            <div class="card">
+                            <div class="card border-0">
                                 <div class="card-body">
                                     <h6>Социальные</h6>
-                                    <div class="row">
+                                    <div class="row mt-3">
                                         <div class="col-xl-12">
                                             <div class="row">
-                                                <div class="col-xl-6"> <img class="mr-3" src="https://placeimg.com/44/40/people" alt="Generic placeholder image">
+                                                <div class="col-xl-6"> <img class="mr-3" src="images/vk.svg">
                                                 </div>
-                                                <div class="col-xl-6"> <img class="mr-3" src="https://placeimg.com/44/40/people" alt="Generic placeholder image">
+                                                <div class="col-xl-6"> <img class="mr-3" src="images/facebook.svg">
                                                 </div>
-                                                <div class="col-xl-6"> <img class="mr-3" src="https://placeimg.com/44/40/people" alt="Generic placeholder image">
+                                                <div class="col-xl-6"> <img class="mr-3 mt-2" src="images/instagram.svg">
                                                 </div>
-                                                <div class="col-xl-6"> <img class="mr-3" src="https://placeimg.com/44/40/people" alt="Generic placeholder image">
+                                                <div class="col-xl-6"> <img class="mr-3 mt-2" src="images/odnoklassniki.svg">
                                                 </div>
                                             </div>
                                         </div>
@@ -65,10 +62,12 @@
                             </div>
                         </div>
                         <div class="col-xl-3">
-                            <div class="card">
+                            <div class="card border-0">
                                 <div class="card-body">
-                                    <span style="font-size: 24px">+7 (473) 2-600-600</span>
-                                    <span style="font-size: 24px">+7 (473) 2-600-600</span>
+                                    <p>
+                                        <span style="font-size: 24px">+7 (473) 2-600-600</span>
+                                        <span style="font-size: 24px">+7 (473) 2-600-600</span>
+                                    </p>
                                     <b>Адрес: </b>
                                     <p>Россия, Воронежская область, Воронеж, ул. Острогожская, 73А</p>
                                 </div>
