--- a/assets/templates/blocks/offer_section.html
+++ b/assets/templates/blocks/offer_section.html
@@ -2,7 +2,7 @@
     <div class="col-xl-9">
         <div class="row">
             <div class="col-xl-12">
-                <div class="card">
+                <div class="card border-0 mt-3">
                     <img class="card-img-top" src="https://placeimg.com/870/190/people" alt="">
                 </div>
             </div>
@@ -10,24 +10,24 @@
 
         <div class="row">
             <div class="col-xl-5">
-                <div class="card">
+                <div class="card border-0 mt-3">
                     <img class="card-img-top" src="https://placeimg.com/330/190/people" alt="">
                 </div>
             </div>
             <div class="col-xl-7">
-                <div class="card">
+                <div class="card border-0 mt-3">
                     <img class="card-img-top" src="https://placeimg.com/470/190/people" alt="">
                 </div>
             </div>
         </div>
 
-        <div class="row">
+        <div class="row mt-3">
             <div class="col-xl-12">
                 <div class="row">
                     <div class="col-xl-3">
-                        <div class="card">
+                        <div class="card border-0 p-2 ">
                             <div class="media">
-                                <img class="mr-3" src="https://placeimg.com/44/40/people" alt="Generic placeholder image">
+                                <img width="44" class="mr-3 mt-1" src="images/gift.svg">
                                 <div class="media-body">
                                     Подарочные сертификаты
                                 </div>
@@ -35,9 +35,9 @@
                         </div>
                     </div>
                     <div class="col-xl-3">
-                        <div class="card">
+                        <div class="card border-0 p-2">
                             <div class="media">
-                                <img class="mr-3" src="https://placeimg.com/44/40/people" alt="Generic placeholder image">
+                                <img width="32,73" class="mr-3 mt-1" src="images/verified.svg">
                                 <div class="media-body">
                                     Весь товар сертифицирован
                                 </div>
@@ -45,9 +45,9 @@
                         </div>
                     </div>
                     <div class="col-xl-3">
-                        <div class="card">
+                        <div class="card border-0 p-2">
                             <div class="media">
-                                <img class="mr-3" src="https://placeimg.com/44/40/people" alt="Generic placeholder image">
+                                <img width="42,11" class="mr-3 mt-1" src="images/loop.svg">
                                 <div class="media-body">
                                     30 дней на обмен и возврат
                                 </div>
@@ -55,9 +55,9 @@
                         </div>
                     </div>
                     <div class="col-xl-3">
-                        <div class="card">
-                            <div class="media">
-                                <img class="mr-3" src="https://placeimg.com/44/40/people" alt="Generic placeholder image">
+                        <div class="card border-0 p-2">
+                            <div class="media mt-auto">
+                                <img width="45" class="mr-3 mt-2" src="images/truck-fast.svg">
                                 <div class="media-body">
                                     Быстрая доставка
                                 </div>
@@ -69,15 +69,17 @@
         </div>
     </div>
     <div class="col-xl-3">
-        <div class="card">
+        <div class="card border-0 mt-3">
             <div class="card-body">
-                <span style="font-size: 24px">+7 (473) 2-600-600</span>
-                <span style="font-size: 24px">+7 (473) 2-600-600</span>
+                <p>
+                    <span style="font-size: 24px">+7 (473) 2-600-600</span>
+                    <span style="font-size: 24px">+7 (473) 2-600-600</span>
+                </p>
                 <button class="btn btn-primary float-right" type="submit">Заказать звонок</button>
             </div>
         </div>
 
-        <div class="card">
+        <div class="card border-0 mt-3">
             <img class="card-img-top" src="https://placeimg.com/270/180/people/grayscale" alt="">
             <div class="card-body">
                 <b>Адрес: </b>
