--- a/assets/templates/blocks/catalog_section.html
+++ b/assets/templates/blocks/catalog_section.html
@@ -1,5 +1,5 @@
 <div class="row">
-    <div class="col-xl-12">
+    <div class="col-xl-12 mt-5">
         <div class="row">
             <div class="col-xl-10">
                 <h3>Кондиционеры</h3>
@@ -11,33 +11,33 @@
     </div>
 </div>
 <div class="row">
-    <div class="col-xl-12">
+    <div class="col-xl-12 mt-3">
         <div class="row ">
             <div class="col-xl-3">
-                <div class="card">
+                <div class="card border-0">
                     <div class="card-body">
-                        This is some text within a card body.
+                            @@include('include_item_post.html')
                     </div>
                 </div>
             </div>
             <div class="col-xl-3">
-                <div class="card">
+                <div class="card border-0">
                     <div class="card-body">
-                        This is some text within a card body.
+                            @@include('include_item_post.html')
                     </div>
                 </div>
             </div>
             <div class="col-xl-3">
-                <div class="card">
+                <div class="card border-0">
                     <div class="card-body">
-                        This is some text within a card body.
+                            @@include('include_item_post.html')
                     </div>
                 </div>
             </div>
             <div class="col-xl-3">
-                <div class="card">
+                <div class="card border-0">
                     <div class="card-body">
-                        This is some text within a card body.
+                            @@include('include_item_post.html')
                     </div>
                 </div>
             </div>
