--- a/assets/templates/blocks/header.html
+++ b/assets/templates/blocks/header.html
@@ -1,44 +1,74 @@
-<nav class="top_menu">
-    <ul>
-        <li><a href="#">О нас</a></li>
-        <li><a href="#">Доставка</a></li>
-        <li><a href="#">Контакты</a></li>
-    </ul>
-</nav>
+<div class="container">
+    <nav class="top_menu text-right">
+        <ul class="top_menu__list">
+            <li class="top_menu__item d-inline"><a class="top_menu__item-link" href="#">О нас</a></li>
+            <li class="top_menu__item d-inline"><a class="top_menu__item-link" href="#">Доставка</a></li>
+            <li class="top_menu__item d-inline"><a class="top_menu__item-link" href="#">Контакты</a></li>
+        </ul>
+    </nav>
+</div>
 
-<nav class="navbar navbar-expand-lg navbar-light bg-light">
+<nav class="main_menu navbar navbar-expand-lg navbar-light bg-light">
     <div class="container">
         <a class="navbar-brand" href="#">
-            <img src="https://getbootstrap.com/assets/brand/bootstrap-solid.svg" width="30" height="30" alt="">
+            <img class="main_menu__logo-img" src="images/logo_img.svg" alt="">
         </a>
-        <span class="text_logo">Интернет-каталог <br> климатической техники</span>
+        <span class="main_menu__logo-text">Интернет-каталог <br> климатической техники</span>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
 
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
-            <ul class="navbar-nav mr-auto">
-                <li class="nav-item dropdown">
-                    <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                Каталог
-              </a>
-                    <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-                        <a class="dropdown-item" href="#">Action</a>
-                        <a class="dropdown-item" href="#">Another action</a>
-                        <div class="dropdown-divider"></div>
-                        <a class="dropdown-item" href="#">Something else here</a>
+            <ul class="navbar-nav mx-auto ">
+                <li class="main_menu__nav-item nav-item dropdown">
+                    <a class="nav-link main_menu__nav-item-link" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                        <img class="main_menu__nav-item-icon" src="images/view-list.svg" alt=""> Каталог
+                    </a>
+                    <div class="dropdown-menu border-0 main_menu__nav-dropcat" aria-labelledby="navbarDropdown">
+                        <h6 class="dropdown-header mt-3 main_menu__nav-dropcat-header">Кондиционеры</h6>
+                        <div class="row">
+                            <div class="col-xl-4">
+                                <a class="dropdown-item main_menu__nav-dropcat-link" href="#">Сплит-системы</a>
+                                <a class="dropdown-item main_menu__nav-dropcat-link" href="#">Мульти сплит-системы с инверторным управлением</a>
+                                <a class="dropdown-item main_menu__nav-dropcat-link" href="#">Кассетные сплит-системы</a>
+                                <a class="dropdown-item main_menu__nav-dropcat-link" href="#">Инверторные кондиционеры</a>
+                                <a class="dropdown-item main_menu__nav-dropcat-link" href="#">Кассетные сплит-системы</a>
+                            </div>
+                            <div class="col-xl-4">
+                                <a class="dropdown-item main_menu__nav-dropcat-link" href="#">Инверторные кондиционеры</a>
+                                <a class="dropdown-item main_menu__nav-dropcat-link" href="#">Колонные сплит-системы</a>
+                                <a class="dropdown-item main_menu__nav-dropcat-link" href="#">Канальные сплит-системы</a>
+                                <a class="dropdown-item main_menu__nav-dropcat-link" href="#">Инверторные кондиционеры</a>
+                                <a class="dropdown-item main_menu__nav-dropcat-link" href="#">Канальные кондиционеры</a>
+                            </div>
+                            <div class="col-xl-4">
+                                <a class="dropdown-item main_menu__nav-dropcat-link" href="#">Мобильные кондиционеры</a>
+                                <a class="dropdown-item main_menu__nav-dropcat-link" href="#">Напольно-потолочные сплит-системы</a>
+                                <a class="dropdown-item main_menu__nav-dropcat-link" href="#">Кондиционеры АКЦИИ</a>
+                            </div>
+                        </div>
+                        <h6 class="dropdown-header mt-3 main_menu__nav-dropcat-header">Увлажнители / Осушители</h6>
+                        <div class="row">
+                            <div class="col-xl-4">
+                                <a class="dropdown-item main_menu__nav-dropcat-link" href="#">Увлажнители и очистители воздуха</a>
+                            </div>
+                        </div>
                     </div>
                 </li>
-                <li class="nav-item active">
-                    <a class="nav-link" href="#">Услуги</a>
+                <li class="main_menu__nav-item nav-item">
+                    <a class="main_menu__nav-item-link nav-link" href="#"><img class="main_menu__nav-item-icon" src="images/wrench.svg" alt=""> Услуги</a>
                 </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="#">Как купить?</a>
+                <li class="main_menu__nav-item nav-item">
+                    <a class="nav-link" href="#"><img class="main_menu__nav-item-icon" src="images/cart.svg" alt=""> Как купить?</a>
                 </li>
             </ul>
-            <form class="form-inline my-2 my-lg-0">
-                <input class="form-control mr-sm-2" type="search" placeholder="Ключевое слово" aria-label="Search">
-                <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Искать</button>
+            <form class="form-inline main_menu__search my-2 my-lg-0">
+                <div class="input-group">
+                    <input type="text" class="form-control main_menu__search-input" placeholder="Search for..." aria-label="Search for...">
+                    <span class="input-group-btn">
+                              <button class="btn btn-secondary" type="button"><img width="20px" src="images/magnify.svg" alt=""></button>
+                            </span>
+                </div>
             </form>
         </div>
     </div>
