--- a/assets/templates/blocks/others_section.html
+++ b/assets/templates/blocks/others_section.html
@@ -1,34 +1,34 @@
-<div class="row">
+<div class="row mt-5">
     <div class="col-xl-6">
         <h3>Акции</h3>
         <div class="row">
-            <div class="col-xl-12">
-                <div class="row ">
+            <div class="col-xl-12 mt-3">
+                <div class="row">
                     <div class="col-xl-6">
-                        <div class="card">
+                        <div class="card border-0">
                             <div class="card-body">
-                                This is some text within a card body.
+                                @@include('include_item_post.html')
                             </div>
                         </div>
                     </div>
                     <div class="col-xl-6">
-                        <div class="card">
+                        <div class="card border-0">
                             <div class="card-body">
-                                This is some text within a card body.
+                                @@include('include_item_post.html')
                             </div>
                         </div>
                     </div>
-                    <div class="col-xl-6">
-                        <div class="card">
+                    <div class="col-xl-6 mt-4">
+                        <div class="card border-0">
                             <div class="card-body">
-                                This is some text within a card body.
+                                @@include('include_item_post.html')
                             </div>
                         </div>
                     </div>
-                    <div class="col-xl-6">
-                        <div class="card">
+                    <div class="col-xl-6 mt-4">
+                        <div class="card border-0">
                             <div class="card-body">
-                                This is some text within a card body.
+                                @@include('include_item_post.html')
                             </div>
                         </div>
                     </div>
@@ -40,33 +40,33 @@
     <div class="col-xl-6">
             <h3>Хиты продаж</h3>
             <div class="row">
-                <div class="col-xl-12">
-                    <div class="row ">
+                <div class="col-xl-12 mt-3">
+                    <div class="row">
                         <div class="col-xl-6">
-                            <div class="card">
+                            <div class="card border-0">
                                 <div class="card-body">
-                                    This is some text within a card body.
+                                    @@include('include_item_post.html')
                                 </div>
                             </div>
                         </div>
                         <div class="col-xl-6">
-                            <div class="card">
+                            <div class="card border-0">
                                 <div class="card-body">
-                                    This is some text within a card body.
+                                    @@include('include_item_post.html')
                                 </div>
                             </div>
                         </div>
-                        <div class="col-xl-6">
-                            <div class="card">
+                        <div class="col-xl-6 mt-4">
+                            <div class="card border-0">
                                 <div class="card-body">
-                                    This is some text within a card body.
+                                    @@include('include_item_post.html')
                                 </div>
                             </div>
                         </div>
-                        <div class="col-xl-6">
-                            <div class="card">
+                        <div class="col-xl-6 mt-4">
+                            <div class="card border-0">
                                 <div class="card-body">
-                                    This is some text within a card body.
+                                    @@include('include_item_post.html')
                                 </div>
                             </div>
                         </div>
