--- a/assets/templates/blocks/sort_section.html
+++ b/assets/templates/blocks/sort_section.html
@@ -1,7 +1,7 @@
 <div class="row">
-    <div class="col-xl-12">
+    <div class="col-xl-12 mt-5">
         <h3>Сортировка товара</h3>
-        <div class="card">
+        <div class="card border-0 mt-3">
             <div class="card-body">
                 <div class="row">
                     <div class="col-xl-9">
