--- a/assets/templates/blocks/offer_section.html
+++ b/assets/templates/blocks/offer_section.html
@@ -2,21 +2,30 @@
     <div class="col-xl-9">
         <div class="row">
             <div class="col-xl-12">
-                <div class="card border-0 mt-3">
-                    <img class="card-img-top" src="https://placeimg.com/870/190/people" alt="">
+                <div class="card offer-product border-0 mt-3">
+                    <a href="#">
+                        <img class="card-img-top offer-product__img" src="https://placeimg.com/870/190/people" alt="">
+                        <span class="offer-product__title">Кондиционеры</span>
+                    </a>
                 </div>
             </div>
         </div>
 
         <div class="row">
             <div class="col-xl-5">
-                <div class="card border-0 mt-3">
-                    <img class="card-img-top" src="https://placeimg.com/330/190/people" alt="">
+                <div class="card offer-product border-0 mt-3">
+                    <a href="#">
+                        <img class="card-img-top offer-product__img" src="https://placeimg.com/330/190/people" alt="">
+                        <span class="offer-product__title">Увлажнители</span>
+                    </a>
                 </div>
             </div>
             <div class="col-xl-7">
-                <div class="card border-0 mt-3">
-                    <img class="card-img-top" src="https://placeimg.com/470/190/people" alt="">
+                <div class="card offer-product  border-0 mt-3">
+                    <a href="#">
+                        <img class="card-img-top offer-product__img" src="https://placeimg.com/470/190/people" alt="">
+                        <span class="offer-product__title">Тепловые пушки</span>
+                    </a>
                 </div>
             </div>
         </div>
@@ -25,40 +34,40 @@
             <div class="col-xl-12">
                 <div class="row">
                     <div class="col-xl-3">
-                        <div class="card border-0 p-2 ">
+                        <div class="card offer border-0 p-2 ">
                             <div class="media">
-                                <img width="44" class="mr-3 mt-1" src="images/gift.svg">
-                                <div class="media-body">
+                                <img class="mr-3 mt-1 offer__img" src="images/gift.svg">
+                                <div class="media-body offer__text">
                                     Подарочные сертификаты
                                 </div>
                             </div>
                         </div>
                     </div>
                     <div class="col-xl-3">
-                        <div class="card border-0 p-2">
+                        <div class="card offer  border-0 p-2">
                             <div class="media">
-                                <img width="32,73" class="mr-3 mt-1" src="images/verified.svg">
-                                <div class="media-body">
+                                <img class="offer__img mr-3 mt-1" src="images/verified.svg">
+                                <div class="media-body offer__text">
                                     Весь товар сертифицирован
                                 </div>
                             </div>
                         </div>
                     </div>
                     <div class="col-xl-3">
-                        <div class="card border-0 p-2">
+                        <div class="card border-0 p-2 offer">
                             <div class="media">
-                                <img width="42,11" class="mr-3 mt-1" src="images/loop.svg">
-                                <div class="media-body">
+                                <img class="mr-3 mt-1 offer__img" src="images/loop.svg">
+                                <div class="media-body offer__text">
                                     30 дней на обмен и возврат
                                 </div>
                             </div>
                         </div>
                     </div>
                     <div class="col-xl-3">
-                        <div class="card border-0 p-2">
-                            <div class="media mt-auto">
-                                <img width="45" class="mr-3 mt-2" src="images/truck-fast.svg">
-                                <div class="media-body">
+                        <div class="card border-0 p-2 offer">
+                            <div class="media">
+                                <img class="mr-3 mt-2 offer__img" src="images/truck-fast.svg">
+                                <div class="media-body offer__text">
                                     Быстрая доставка
                                 </div>
                             </div>
@@ -69,19 +78,19 @@
         </div>
     </div>
     <div class="col-xl-3">
-        <div class="card border-0 mt-3">
-            <div class="card-body">
-                <p>
-                    <span style="font-size: 24px">+7 (473) 2-600-600</span>
-                    <span style="font-size: 24px">+7 (473) 2-600-600</span>
+        <div class="card border-0 mt-3 phone">
+            <div class="card-body p-2">
+                <p class="phone__number">
+                    <span>+7 (473) 2-600-600</span>
+                    <span>+7 (473) 2-600-600</span>
                 </p>
                 <button class="btn btn-primary float-right" type="submit">Заказать звонок</button>
             </div>
         </div>
 
-        <div class="card border-0 mt-3">
+        <div class="card border-0 mt-3 address">
             <img class="card-img-top" src="https://placeimg.com/270/180/people/grayscale" alt="">
-            <div class="card-body">
+            <div class="card-body mt-3 p-2 address__text">
                 <b>Адрес: </b>
                 <p>Россия, Воронежская область, Воронеж, ул. Острогожская, 73А</p>
                 <button class="btn btn-primary float-right" type="submit">Смотреть на карте</button>
