--- a/assets/templates/blocks/catalog_section.html
+++ b/assets/templates/blocks/catalog_section.html
@@ -5,7 +5,7 @@
                 <h3>Кондиционеры</h3>
             </div>
             <div class="col-xl-2">
-                    <a href="#" class="btn btn-secondary btn-block" role="button" aria-pressed="true">Больше</a>
+                    <a href="#" class="btn btn-primary catalog-section__button-all" role="button" aria-pressed="true">Больше <img src="images/view-grid.svg" alt=""></a>
             </div>
         </div>
     </div>
@@ -15,28 +15,28 @@
         <div class="row ">
             <div class="col-xl-3">
                 <div class="card border-0">
-                    <div class="card-body">
+                    <div class="card-body cat-product">
                             @@include('include_item_post.html')
                     </div>
                 </div>
             </div>
             <div class="col-xl-3">
                 <div class="card border-0">
-                    <div class="card-body">
+                    <div class="card-body cat-product">
                             @@include('include_item_post.html')
                     </div>
                 </div>
             </div>
             <div class="col-xl-3">
                 <div class="card border-0">
-                    <div class="card-body">
+                    <div class="card-body cat-product">
                             @@include('include_item_post.html')
                     </div>
                 </div>
             </div>
             <div class="col-xl-3">
                 <div class="card border-0">
-                    <div class="card-body">
+                    <div class="card-body cat-product">
                             @@include('include_item_post.html')
                     </div>
                 </div>
