--- a/assets/templates/blocks/header.html
+++ b/assets/templates/blocks/header.html
@@ -28,29 +28,29 @@
                         <h6 class="dropdown-header mt-3 main_menu__nav-dropcat-header">Кондиционеры</h6>
                         <div class="row">
                             <div class="col-xl-4">
-                                <a class="dropdown-item main_menu__nav-dropcat-link" href="#">Сплит-системы</a>
-                                <a class="dropdown-item main_menu__nav-dropcat-link" href="#">Мульти сплит-системы с инверторным управлением</a>
-                                <a class="dropdown-item main_menu__nav-dropcat-link" href="#">Кассетные сплит-системы</a>
-                                <a class="dropdown-item main_menu__nav-dropcat-link" href="#">Инверторные кондиционеры</a>
-                                <a class="dropdown-item main_menu__nav-dropcat-link" href="#">Кассетные сплит-системы</a>
+                                <a class="dropdown-item main_menu__nav-dropcat-link" href="#"><span>Сплит-системы</span></a>
+                                <a class="dropdown-item main_menu__nav-dropcat-link" href="#"><span>Мульти сплит-системы с инверторным управлением</span></a>
+                                <a class="dropdown-item main_menu__nav-dropcat-link" href="#"><span>Кассетные сплит-системы</span></a>
+                                <a class="dropdown-item main_menu__nav-dropcat-link" href="#"><span>Инверторные кондиционеры</span></a>
+                                <a class="dropdown-item main_menu__nav-dropcat-link" href="#"><span>Кассетные сплит-системы</span></a>
                             </div>
                             <div class="col-xl-4">
-                                <a class="dropdown-item main_menu__nav-dropcat-link" href="#">Инверторные кондиционеры</a>
-                                <a class="dropdown-item main_menu__nav-dropcat-link" href="#">Колонные сплит-системы</a>
-                                <a class="dropdown-item main_menu__nav-dropcat-link" href="#">Канальные сплит-системы</a>
-                                <a class="dropdown-item main_menu__nav-dropcat-link" href="#">Инверторные кондиционеры</a>
-                                <a class="dropdown-item main_menu__nav-dropcat-link" href="#">Канальные кондиционеры</a>
+                                <a class="dropdown-item main_menu__nav-dropcat-link" href="#"><span>Инверторные кондиционеры</span></a>
+                                <a class="dropdown-item main_menu__nav-dropcat-link" href="#"><span>Колонные сплит-системы</span></a>
+                                <a class="dropdown-item main_menu__nav-dropcat-link" href="#"><span>Канальные сплит-системы</span></a>
+                                <a class="dropdown-item main_menu__nav-dropcat-link" href="#"><span>Инверторные кондиционеры</span></a>
+                                <a class="dropdown-item main_menu__nav-dropcat-link" href="#"><span>Канальные кондиционеры</span></a>
                             </div>
                             <div class="col-xl-4">
-                                <a class="dropdown-item main_menu__nav-dropcat-link" href="#">Мобильные кондиционеры</a>
-                                <a class="dropdown-item main_menu__nav-dropcat-link" href="#">Напольно-потолочные сплит-системы</a>
-                                <a class="dropdown-item main_menu__nav-dropcat-link" href="#">Кондиционеры АКЦИИ</a>
+                                <a class="dropdown-item main_menu__nav-dropcat-link" href="#"><span>Мобильные кондиционеры</span></a>
+                                <a class="dropdown-item main_menu__nav-dropcat-link" href="#"><span>Напольно-потолочные сплит-системы</span></a>
+                                <a class="dropdown-item main_menu__nav-dropcat-link" href="#"><span>Кондиционеры АКЦИИ</span></a>
                             </div>
                         </div>
                         <h6 class="dropdown-header mt-3 main_menu__nav-dropcat-header">Увлажнители / Осушители</h6>
                         <div class="row">
                             <div class="col-xl-4">
-                                <a class="dropdown-item main_menu__nav-dropcat-link" href="#">Увлажнители и очистители воздуха</a>
+                                <a class="dropdown-item main_menu__nav-dropcat-link" href="#"><span>Увлажнители и очистители воздуха</span></a>
                             </div>
                         </div>
                     </div>
@@ -64,9 +64,9 @@
             </ul>
             <form class="form-inline main_menu__search my-2 my-lg-0">
                 <div class="input-group">
-                    <input type="text" class="form-control main_menu__search-input" placeholder="Search for..." aria-label="Search for...">
+                    <input type="text" class="form-control main_menu__search-input" placeholder="Что найти?" aria-label="Search for...">
                     <span class="input-group-btn">
-                              <button class="btn btn-secondary" type="button"><img width="20px" src="images/magnify.svg" alt=""></button>
+                              <button class="btn main_menu__search-button" type="button"><img class="main_menu__search-button-icon" src="images/magnify.svg" alt=""></button>
                             </span>
                 </div>
             </form>
